implement combined graph in multiSpots